--- a/index.html
+++ b/index.html
@@ -1,12 +1,133 @@
-<!DOCTYPE html>
-<html>
-<head>
-   <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh"
-   content="0; url="http://eclipse2019.github.io/eclipse2019">
-</head>
-<body>
-   <p>The page has moved to:
-   <a href="http://eclipse2019.github.io/eclipse2019">this page</a></p>
-</body>
+<!doctype html>
+<html lang="en">
+    <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141768960-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-141768960-1');
+	</script>
+	 
+	<!-- Analytics goes first, now goes adsense -->    
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "ca-pub-3475924351339219",
+	    enable_page_level_ads: true
+	  });
+	</script>	    
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link rel="stylesheet" href="./resources/ol3-layerswitcher.css">
+        <link rel="stylesheet" href="./resources/qgis2web.css">
+<style>
+.search-layer {
+  top: 100px;
+  left: .5em;
+}
+.ol-touch .search-layer {
+  top: 130px;
+}
+
+</style>
+        <style>
+        html, body {
+            background-color: #ffffff;
+        }
+        .ol-control button {
+            background-color: #f8f8f8 !important;
+            color: #000000 !important;
+            border-radius: 0px !important;
+        }
+        .ol-zoom, .geolocate, .gcd-gl-control .ol-control {
+            background-color: rgba(255,255,255,.4) !important;
+            padding: 3px !important;
+        }
+        .ol-scale-line {
+            background: none !important;
+        }
+        .ol-scale-line-inner {
+            border: 2px solid #f8f8f8 !important;
+            border-top: none !important;
+            background: rgba(255, 255, 255, 0.5) !important;
+            color: black !important;
+        }
+        </style>
+
+        <style>
+        .geolocate {
+            top: 65px;
+            left: .5em;
+        }
+        .ol-touch .geolocate {
+            top: 80px;
+        }
+        </style>
+        <style>
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
+	#over {
+    		position: absolute;
+    		top: 1%;
+			right:50%;
+			margin-right: -89px
+	}
+	#over2 {
+    		position: absolute;
+    		top: 1%;
+			right:50%;
+			margin-right: 2px
+	}
+        </style>
+        <title></title>
+    </head>
+    <body>
+        <div id="map">
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
+        </div>
+        <script src="resources/qgis2web_expressions.js"></script>
+        <script src="resources/polyfills.js"></script>
+        <script src="./resources/functions.js"></script>
+        <script src="./resources/ol.js"></script>
+        <script src="./resources/ol3-layerswitcher.js"></script>
+        <script src="layers/centralLine_3.js"></script><script src="layers/limiteNorte_4.js"></script><script src="layers/limiteSur_5.js"></script>
+        <script src="styles/centralLine_3_style.js"></script><script src="styles/limiteNorte_4_style.js"></script><script src="styles/limiteSur_5_style.js"></script>
+        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./resources/qgis2web.js"></script>
+        <script src="./resources/Autolinker.min.js"></script>
+	    
+	<!-- Donate -->    
+	<div id="over">
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		<input type="hidden" name="cmd" value="_donations" />
+		<input type="hidden" name="business" value="KTTB2NF66DMBC" />
+		<input type="hidden" name="item_name" value="Support my work!" />
+		<input type="hidden" name="currency_code" value="USD" />
+		<input type="image" src="images/paypalbutton.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+		<img alt="" border="0" src="https://www.paypal.com/en_CL/i/scr/pixel.gif" width="1" height="1" />
+		</form>
+	</div>
+	<div id="over2">
+		<form action="https://www.mercadopago.com/mlc/checkout/pay?pref_id=74123274-056ea4e0-2589-4b05-bd83-b2019786f4ae" method="post" target="_top">
+		<input type="image" src="images/mercadopago.gif" border="0" name="submit" title="Donar con MercadoPago" alt="Donate with MercadoPago" />
+		<img alt="" border="0" src="https://www.paypal.com/en_CL/i/scr/pixel.gif" width="1" height="1" />
+		</form>
+	</div>		
+		
+    </body>
 </html>
