--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	    
 	<!-- Donate -->    
 	<div id="over">
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="blank">
 		<input type="hidden" name="cmd" value="_donations" />
 		<input type="hidden" name="business" value="KTTB2NF66DMBC" />
 		<input type="hidden" name="item_name" value="Support my work!" />
@@ -124,7 +124,7 @@
 		</form>
 	</div>
 	<div id="over2">
-		<form action="https://www.mercadopago.com/mlc/checkout/pay?pref_id=74123274-056ea4e0-2589-4b05-bd83-b2019786f4ae" method="post" target="_top">
+		<form action="https://www.mercadopago.com/mlc/checkout/pay?pref_id=74123274-056ea4e0-2589-4b05-bd83-b2019786f4ae" method="post" target="blank">
 		<input type="image" src="images/mercadopago.gif" border="0" name="submit" title="Donar con MercadoPago" alt="Donate with MercadoPago" />
 		<img alt="" border="0" src="https://www.paypal.com/en_CL/i/scr/pixel.gif" width="1" height="1" />
 		</form>
