--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
 			right:50%;
 			margin-right: 2px
 	}
+	#credits {
+    		position: absolute;
+			bottom: 1%;
+			right:50%;
+	}
         </style>
         <title></title>
     </head>
@@ -128,7 +133,10 @@
 		<input type="image" src="images/mercadopago.gif" border="0" name="submit" title="Donar con MercadoPago" alt="Donate with MercadoPago" />
 		<img alt="" border="0" src="https://www.paypal.com/en_CL/i/scr/pixel.gif" width="1" height="1" />
 		</form>
-	</div>		
+	</div>
+<div id="credits">
+<a href="mailto:ivan_xd@live.cl" target="_top">© Ivan Gonzalez 2019 Chile	</a>
+</div>	
 		
     </body>
 </html>
