--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
 	}
 	#credits {
     		position: absolute;
-			bottom: 1%;
+			bottom: -2%;
 			right:50%;
+			left:50%;
+			margin-right: -50%;
+			transform: translate(-50%, -50%);
+			font-size: 0.7em;
 	}
         </style>
         <title></title>
@@ -135,7 +139,8 @@
 		</form>
 	</div>
 <div id="credits">
-<a href="mailto:ivan_xd@live.cl" target="_top">© Ivan Gonzalez 2019 Chile	</a>
+<p style="text-align:center">
+<a href="mailto:ivan_xd@live.cl" target="_top">©Ivan Gonzalez</a> <br> Map data ©2019 Google</p>
 </div>	
 		
     </body>
