Added og tag for sharing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 	    enable_page_level_ads: true
 	  });
 	</script>	
-	    
+	    <meta property="og:image" content="images/eclipse.png" />
+		<meta property="og:type" content="website" /> 		
+		<meta property="og:url" content="https://eclipse2019.github.io" />
+		<meta property="og:title" content="2019 Eclipse Visibilidad" /> 
+		<meta property="og:description" content="Clasifica el mapa según la visibilidad del sol durante el eclipse." />
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
