fixed og image tag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    enable_page_level_ads: true
 	  });
 	</script>	
-	    <meta property="og:image" content="images/eclipse.png" />
+	    <meta property="og:image" content="https://eclipse2019.github.io/images/eclipse.png" />
 		<meta property="og:type" content="website" /> 		
 		<meta property="og:url" content="https://eclipse2019.github.io" />
 		<meta property="og:title" content="2019 Eclipse Visibilidad" /> 
