changes splash to jpg

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	  });
 	</script>	
 	    <meta property="fb:app_id"          content="334689857202881" /> 
-		<meta property="og:image" content="https://eclipse2019.github.io/images/fb_splash.gif" />
+		<meta property="og:image" content="https://eclipse2019.github.io/images/fb_splash.jpg" />
 		<meta property="og:type" content="website" /> 		
 		<meta property="og:url" content="https://eclipse2019.github.io" />
 		<meta property="og:title" content="2019 Eclipse Visibilidad" /> 
