--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
         }
 	#over {
     		position: absolute;
-    		top: 1%;
-			right:0%;
-			margin-right: 1%;
+    		bottom: 1%;
+			left:0%;
+			margin-left: 1%;
 	}
 	#over2 {
     		position: absolute;
-    		top: 1%;
-			right:0%;
-			margin-right: 1%;
-			margin-top: 37px;
+    		bottom: 1%;
+			left:0%;
+			margin-left: 1%;
+			margin-bottom: 37px;
 	}
 	#legend {
     		position: absolute;
