--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
 
 	<div id="credits">
 	<p style="text-align:center">
-	<a href="mailto:ivan_xd@live.cl" target="_top">©Ivan Gonzalez</a> <br> Map data ©2019 Google</p>
+	<a href="mailto:ivan_xd@live.cl" target="_top">©Ivan Gonzalez</a> <br> Map data ©2019 Google
+  <!-- <br> <a href="http://www.accuweather.com"><IMG height=10 src="images/aw.png"  align=baseline> </a> -->
+  </p>
 	</div>
 
 	<div class="dropdown" id="legend">
