--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 	#credits {
     		position: absolute;
-			bottom: -2%;
+			bottom: -3em;
 			right:50%;
 			left:50%;
 			margin-right: -50%;
