buy me a coffee

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 		</form>
 	</div>
 	<div id="over2">
-    Buy me coffee!
+    <font size="1em" color="black">Buy me a coffee!</font>
 		<form action="https://www.mercadopago.com/mlc/checkout/pay?pref_id=74123274-056ea4e0-2589-4b05-bd83-b2019786f4ae" method="post" target="blank">
 		<input type="image" src="images/mercadopago.gif" border="0" name="submit" title="Donar con MercadoPago" alt="Donate with MercadoPago" />
 		<img alt="" border="0" src="https://www.paypal.com/en_CL/i/scr/pixel.gif" width="1" height="1" />
