--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       //Getting weather.com/sat timestamp
       // sacar timestamp de https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=sat
       var ts_WeatherSat;
+      //ts_WeatherSat = new Date().valueOf()/1000 | 0;
+      ts_WeatherSat = '1560917700';
+
+      /*
       $.ajax({
         url: 'https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=sat',
         dataType: 'json',
@@ -53,7 +57,8 @@
             ts_WeatherSat = json.seriesInfo.sat.series[0].ts;
         }
       });
-      //console.log(ts_WeatherSat);
+      */
+      console.log(ts_WeatherSat);
 
       //Getting weather.com/satgoes16FullDiskVis timestamp
       // sacar timestamp de https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=satgoes16FullDiskVis
