--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       //Getting weather.com/sat timestamp
       // sacar timestamp de https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=sat
       var ts_WeatherSat;
-      //ts_WeatherSat = new Date().valueOf()/1000 | 0;
-      ts_WeatherSat = '1560917700';
+      ts_WeatherSat = new Date().valueOf()/1000 | 0;
+      ts_WeatherSat = ((ts_WeatherSat/900 | 0)-1)*900;
 
       /*
       $.ajax({
@@ -58,11 +58,15 @@
         }
       });
       */
-      console.log(ts_WeatherSat);
+      //console.log(ts_WeatherSat);
+      //console.log(new Date().valueOf()/1000 | 0);
 
       //Getting weather.com/satgoes16FullDiskVis timestamp
       // sacar timestamp de https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=satgoes16FullDiskVis
       var ts_satgoes;
+      ts_satgoes = new Date().valueOf()/1000 | 0;
+      ts_satgoes = ((((ts_satgoes-56)/600 | 0))-3)*600+56;
+      /*
       $.ajax({
         url: 'https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=satgoes16FullDiskVis',
         dataType: 'json',
@@ -71,6 +75,7 @@
             ts_satgoes = json.seriesInfo.satgoes16FullDiskVis.series[0].ts;
         }
       });
+      */
       //console.log(ts_satgoes);
 
 
