--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   <div class="dropdown" id="legend">
     <button class="dropbtn">Legend</button>
     <div class="dropdown-content">
-      <a ><IMG height=10 src="" width=0 align=baseline> <b>Angular height of northwestern horizon</b> </a>
+      <a ><IMG height=10 src="" width=0 align=baseline> <b>Angular elevation of northwestern horizon</b> </a>
       <a ><IMG height=10 src="images/pixLgreen.gif" width=10 align=baseline> <0.5° / C4 visible </a>
       <a ><IMG height=10 src="images/pixGreen.gif" width=10 align=baseline> 0.5° - 2.5° </a>
       <a ><IMG height=10 src="images/pixYellow.gif" width=10 align=baseline> 2.5° - 5.0° </a>
