testing ajax once again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
       });
   </script>
 
-  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+  <script>
+      //Getting weather.com/satgoes16FullDiskVis timestamp
+      // sacar timestamp de https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=satgoes16FullDiskVis
+      var ts_satgoes_url = 'https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=satgoes16FullDiskVis';
+      var ts_satgoes;
+      ts_satgoes = new Date().valueOf()/1000 | 0;
+      ts_satgoes = ((((ts_satgoes-57)/600 | 0))-3)*600+57;
+
+      $.ajax({
+        url: ts_satgoes_url,
+        dataType: 'json',
+        async: false,
+        success: function(json){
+            ts_satgoes = json.seriesInfo.satgoes16FullDiskVis.series[0].ts;
+        }
+      });
+      console.log(ts_satgoes);
+  </script>
 
   <!-- Facebook property identifiers -->
   <meta property="fb:app_id"          content="334689857202881" />
