--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
       // sacar timestamp de https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=satgoes16FullDiskVis
       var ts_satgoes_url = 'https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=satgoes16FullDiskVis';
       var ts_satgoes;
-      ts_satgoes = new Date().valueOf()/1000 | 0;
-      ts_satgoes = ((((ts_satgoes-57)/600 | 0))-3)*600+57;
+      var ts_WeatherSat_url = 'https://api.weather.com/v3/TileServer/series/productSet?apiKey=d522aa97197fd864d36b418f39ebb323&filter=sat';
+      var ts_WeatherSat;
+
+      //ts_satgoes = new Date().valueOf()/1000 | 0;
+      //ts_satgoes = ((((ts_satgoes-57)/600 | 0))-3)*600+57;
 
       $.ajax({
         url: ts_satgoes_url,
@@ -38,6 +41,17 @@
         }
       });
       console.log(ts_satgoes);
+
+      $.ajax({
+        url: ts_WeatherSat_url,
+        dataType: 'json',
+        async: false,
+        success: function(json){
+            ts_WeatherSat = json.seriesInfo.sat.series[0].ts;
+        }
+      });
+      console.log(ts_WeatherSat);
+
   </script>
 
   <!-- Facebook property identifiers -->
