--- a/index.html
+++ b/index.html
@@ -205,8 +205,14 @@
   <script src="./resources/functions.js"></script>
   <script src="./resources/ol.js"></script>
   <script src="./resources/ol3-layerswitcher.js"></script>
-  <script src="layers/centralLine_3.js"></script><script src="layers/limiteNorte_4.js"></script><script src="layers/limiteSur_5.js"></script>
-  <script src="styles/centralLine_3_style.js"></script><script src="styles/limiteNorte_4_style.js"></script><script src="styles/limiteSur_5_style.js"></script>
+  <script src="layers/pais_1.js"></script>
+  <script src="layers/centralLine_3.js"></script>
+  <script src="layers/limiteNorte_4.js"></script>
+  <script src="layers/limiteSur_5.js"></script>
+  <script src="styles/pais_1_style.js"></script>
+  <script src="styles/centralLine_3_style.js"></script>
+  <script src="styles/limiteNorte_4_style.js"></script>
+  <script src="styles/limiteSur_5_style.js"></script>
   <script src="./layers/layers.js" type="text/javascript"></script>
   <script src="./resources/qgis2web.js"></script>
   <script src="./resources/Autolinker.min.js"></script>
